# mys-salt-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  bug_report.md  nixpacks.toml  plan.md  railway.json
.cursor/: scratchpad.md
.sqlx/: query-39a0dd4c4c2f21b45f0e967903a0fda0b96fc5fdc01b0e2e087d82e4e6cc407f.json
migrations/: 001_initial_schema.sql  002_change_ip_to_text.sql  003_update_user_lookup_index.sql
scripts/: setup.sh  verify-deployment.sh
src/: config.rs  indexer_platforms.rs  lib.rs  main.rs  monitoring.rs  state.rs
src/auth/: exchange.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/security/: access_token.rs  address_derivation.rs  jwt.rs  mod.rs  session_token.rs  wallet_signature.rs
tests/: multi_device.rs
