[package]
name = "mys-salt-service"
version = "0.1.0"
edition = "2021"
default-run = "mys-salt-service"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "ipnetwork"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security & Crypto
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.21"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"



# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"
config = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Rate limiting
governor = "0.6"

# Health checks
axum-server-timing = "0.3" 
hex = "0.4.3"
